# Agent-Token

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  start.sh  分工方案.md
agents/common/: __init__.py  auth.py  bootstrap_register.py  capability.py  config.py  logging.py  server.py  ulid.py
agents/data_agent/: __init__.py  capability.yaml  handler.py  main.py
agents/doc_assistant/: __init__.py  capability.yaml  graph.py  handler.py  main.py  sdk.py  storage.py
agents/web_agent/: __init__.py  capability.yaml  handler.py  main.py
apps/web/: pnpm-lock.yaml
capabilities/: doc_assistant.yaml  web_ui.yaml
docs/: AGENTS_FINAL_REPORT.md  M1_INTEGRATION_REPORT.md  M2_INTEGRATION_REPORT.md  RUN_CHAIN.md  SDK_FINAL_REPORT.md  系统现状.md  阶段小结.md
docs/design/: API接口清单.md  分工方案.md  方案-细化.md  课题.md
docs/slides/: README.md  slides.md  slides.md.bak
gateway/: .env.example  README.md  config.py  main.py  requirements.txt
gateway/authz/: delegation.py
gateway/middleware/: authn.py  rate_limit.py  trace.py
gateway/revoke/: bloom.py
gateway/routes/: admin.py  invoke.py  nl.py  plan.py
gateway/routing/: upstream_client.py
scripts/: agent_entrypoint.sh  e2e_demo.py  feishu_smoke.py  run_tests.sh  test_e2e.sh
sdk/: pyproject.toml
sdk/agent_token_sdk/: __init__.py  assertion.py  client.py  dpop.py  errors.py  server.py
sdk/agent_token_sdk/adapters/: __init__.py  autogen.py  langchain.py  langgraph.py
tests/: bench_audit.py  bench_audit_max.py  conftest.py
users/: alice.yaml
分模块方案/: 方案-AuditAPI.md
(+254 files in other folders)
